# CppAwait

./: .gitattributes  .gitignore  CHANGELOG  CMakeLists.txt  CppAwait.sln  PROJECTS  README.md  TODO
CppAwait/: AsioWrappers.cpp  Awaitable.cpp  CMakeLists.txt  ConfigPrivate.h  Coro.cpp  CppAwait.vcxproj  CppAwait.vcxproj.filters  Log.cpp  Scheduler.cpp  SharedFlag.cpp  StackContext.cpp  StringUtil.cpp  stdafx.h
Examples/: AsioScheduler.cpp  AsioScheduler.h  CMakeLists.txt  ExUtil.h  Examples.filters  Examples.vcxproj  LooScheduler.h  Util.h  ex_awaitBasics.cpp  ex_awaitChatClient.cpp  ex_awaitChatServer.cpp  ex_awaitFlicker.cpp  ex_awaitFlickr.cpp  ex_awaitHttpClient.cpp  ex_awaitThread.cpp  ex_comboDetector.cpp  ex_fibonacci.cpp  ex_iterator.cpp  ex_stockClient.cpp  ex_stockServer.cpp  main.cpp  mainLoopHooks.cpp  stdafx.h
Examples/Looper/: Chrono.cpp  Chrono.h  Looper.cpp  Looper.h  Scheduler.cpp  Scheduler.h  Thread.h
LibLooper/: Chrono.cpp  LibLooper.vcxproj  LibLooper.vcxproj.filters  Looper.cpp  Scheduler.cpp  stdafx.h
Looper/: CMakeLists.txt  Chrono.cpp  Looper.cpp  Scheduler.cpp  stdafx.h
doc/: Doxyfile
include/CppAwait/: AsioWrappers.h  Awaitable.h  BoundedQueue.h  Condition.h  Config.h  Coro.h  Log.h  OpaqueSharedPtr.h  StackContext.h  YieldCollection.h  YieldSequence.h
include/CppAwait/impl/: Assert.h  CallbackGuard.h  Compatibility.h  CompletionGuard.h  Foreach.h  Functional.h  Log.h  OpaqueSharedPtr.h  ScopeGuard.h  SharedFlag.h  Signals.h  StringUtil.h  Util.h
include/CppAwait/misc/: CallbackGuard.h  FastAction.h  Functional.h  HybridVector.h  OpaqueSharedPtr.h  Scheduler.h  ScopeGuard.h  Signals.h
include/Looper/: Chrono.h  Looper.h  Scheduler.h  Thread.h
